# Snippy

./: .gitignore  LICENSE  README.md  pyproject.toml
posterboard/: __init__.py  __main__.py  settings.py
posterboard/commands/: __init__.py  add.py  help.py  init.py
posterboard/commands/templates/: directory.txt  files.txt
posterboard/core/: commands.py  controller.py  loggers.py  parsers.py
posterboard/loaders/: commands.py  loader.py  loggers.py  settings.py
posterboard/tests/: core_test.py
posterboard/tools/: __init__.py  debugging.py  filehandling.py  names.py
posterboard/validators/: loggers.py
snippy/: __init__.py  __main__.py  commands.py  controller.py  core_settings.py  parsers.py  settings.py
snippy/commands/: __init__.py  add.py  base.py  help.py  init.py  parser.py  test.py
snippy/commands/templates/: files.txt
snippy/controller/: commands.py  loader.py  loggers.py  settings.py
snippy/controllers/: controller.py
snippy/core/: commands.py  controller.py  loggers.py  parsers.py
snippy/exceptions/commands/: __init__.py
snippy/loaders/: commands.py  loader.py  loggers.py  settings.py
snippy/logger/: levels.py  loggers.py
snippy/parser/: parsers.py
snippy/tests/: base_test.py  core_test.py  extentions_test.py  logger_test.py
snippy/tools/: __init__.py  annotation.py  debugging.py  dictionary.py  filehandling.py  names.py
snippy/util/: __init__.py  annotation.py  classname.py  dictionary.py  names.py  project_name.py
snippy/validators/: commands.py  loggers.py  settings.py
test_project/: __main__.py  settings.py
(+3 files in other folders)
