[tool.poetry]
name = "snippy"
version = "0.0.0"
description = "CLI sub-framework"
authors = ["Keenan Wilkinson <keenanwilkinson@outlook.com>"]
license = "BSD 3-Clause"

[tool.poetry.dependencies]
python = "3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}
pytest = "^6.1.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
